<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lbStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/label_start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btKontaktList"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="OpenContactsClick"
        android:text="@string/button_contacts" />

    <Button
        android:id="@+id/btCalendarView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="OpenCalendarClick"
        android:text="@string/button_calendar" />

    <Button
        android:id="@+id/btGiftList"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btKontaktList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="OpenGiftClick"
        android:text="@string/button_gifts" />

</RelativeLayout>